force-app/main/default/objects/Queue__c/Queue__c.object-meta.xml
<CustomObject>
    <description>[a0G][Queue__c] Responsável por prover garantia de entrega para camada de integração</description>
    <label>Item da fila de integração</label>
    <nameField>
        <displayFormat>QIT-{0000000000}</displayFormat>
        <label>Item da fila de integração</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens da fila de integração</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>