force-app/main/default/objects/Queue__c/fields/ExternalCreationDate__c.field-meta.xml
<CustomField>
    <fullName>ExternalCreationDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>External last modified date based on iDoc date (using the external system date/timezone) to ensure the integration between systems will keep the transactions sequence as they were triggered by the original System</description>
    <label>External Creation Date</label>
    <type>DateTime</type>
</CustomField>