force-app/main/default/objects/Queue__c/fields/IntegrationMapLkp__c.field-meta.xml
<CustomField>
    <fullName>IntegrationMapLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapa de integração</label>
    <referenceTo>IntegrationMap__c</referenceTo>
    <relationshipLabel>Items da fila de integração</relationshipLabel>
    <relationshipName>IntegratioMaps</relationshipName>
    <type>Lookup</type>
</CustomField>