force-app/main/default/objects/Queue__c/fields/IsRetryDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsRetryDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify if the retries should be executed for this event. If equal TRUE disable retries even if retry count is bigger than zero (can be used for errors as errors does not require retries)</description>
    <label>Is Retry Disable?</label>
    <type>Checkbox</type>
</CustomField>