force-app/main/default/objects/Queue__c/fields/IsSync__c.field-meta.xml
<CustomField>
    <fullName>IsSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É síncrona</label>
    <type>Checkbox</type>
</CustomField>