force-app/main/default/objects/Queue__c/fields/NotificationReceivers__c.field-meta.xml
<CustomField>
    <fullName>NotificationReceivers__c</fullName>
    <label>NotificationReceivers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>