force-app/main/default/objects/Queue__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <description>Object ID (internal Sales Force Id) related to this event (used to retrieve information to create the transaction to the receiver Account)</description>
    <label>ObjectId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>