force-app/main/default/objects/Queue__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Payload
(Valor do Objeto Corrente, para atribuir esta informação concatene o objeto a uma string e atribua este valor concatenado ao payload. Este Atributo podera ser utilizado no futuro para Determinar o estado do Evento Corrente dispensando o uso do RecordType QUEUED nos Objetos que necessitam gerenciamento de estado)</description>
    <label>Payload</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>