force-app/main/default/objects/Queue__c/fields/ReceiverAccount__c.field-meta.xml
<CustomField>
    <fullName>ReceiverAccount__c</fullName>
    <label>ReceiverAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>