force-app/main/default/objects/Queue__c/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Identify the number of retries for this event</description>
    <label>Retry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>