force-app/main/default/objects/Queue__c/fields/soapPayload__c.field-meta.xml
<CustomField>
    <fullName>soapPayload__c</fullName>
    <label>soapPayload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>