force-app/main/default/objects/Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>EventName__c</columns>
    <columns>IsSync__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>StatusMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/26/2018 12:00 AM</value>
    </filters>
    <label>Tudo_Atual</label>
</ListView>