force-app/main/default/objects/Queue__c/listViews/All_errors.listView-meta.xml
<ListView>
    <fullName>All_errors</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>EventName__c</columns>
    <columns>IsSync__c</columns>
    <columns>Status__c</columns>
    <columns>StatusMessage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <label>Erros</label>
</ListView>