force-app/main/default/objects/Queue__c/listViews/Area_de_vendas.listView-meta.xml
<ListView>
    <fullName>Area_de_vendas</fullName>
    <columns>NAME</columns>
    <columns>IsSync__c</columns>
    <columns>EventName__c</columns>
    <columns>Status__c</columns>
    <columns>StatusMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventName__c</field>
        <operation>equals</operation>
        <value>SYNC_SALE_AREA_INBOUND</value>
    </filters>
    <label>Area de vendas</label>
</ListView>