force-app/main/default/objects/Queue__c/listViews/Conta_pessoa_f_sica.listView-meta.xml
<ListView>
    <fullName>Conta_pessoa_f_sica</fullName>
    <columns>NAME</columns>
    <columns>IsSync__c</columns>
    <columns>EventName__c</columns>
    <columns>Status__c</columns>
    <columns>StatusMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventName__c</field>
        <operation>equals</operation>
        <value>SYNC_CONTACT_ACCOUNT_INBOUND</value>
    </filters>
    <label>Conta pessoa física</label>
</ListView>