force-app/main/default/objects/Queue__c/listViews/Contato.listView-meta.xml
<ListView>
    <fullName>Contato</fullName>
    <columns>NAME</columns>
    <columns>IsSync__c</columns>
    <columns>EventName__c</columns>
    <columns>Status__c</columns>
    <columns>StatusMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventName__c</field>
        <operation>equals</operation>
        <value>SYNC_CONTACT_INBOUND</value>
    </filters>
    <label>Contato</label>
</ListView>