force-app/main/default/objects/Queue__c/listViews/Endere_o.listView-meta.xml
<ListView>
    <fullName>Endere_o</fullName>
    <columns>NAME</columns>
    <columns>IsSync__c</columns>
    <columns>EventName__c</columns>
    <columns>Status__c</columns>
    <columns>StatusMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventName__c</field>
        <operation>equals</operation>
        <value>SYNC_ADDRESS_INBOUND</value>
    </filters>
    <label>Endereço</label>
</ListView>