force-app/main/default/objects/Queue__c/listViews/Integra_o_com_erro.listView-meta.xml
<ListView>
    <fullName>Integra_o_com_erro</fullName>
    <columns>NAME</columns>
    <columns>IsSync__c</columns>
    <columns>EventName__c</columns>
    <columns>Status__c</columns>
    <columns>StatusMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <label>Integração com erro</label>
</ListView>