force-app/main/default/objects/Queue__c/listViews/Medidas_de_QM.listView-meta.xml
<ListView>
    <fullName>Medidas_de_QM</fullName>
    <columns>NAME</columns>
    <columns>IsSync__c</columns>
    <columns>EventName__c</columns>
    <columns>Status__c</columns>
    <columns>StatusMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventName__c</field>
        <operation>equals</operation>
        <value>SYNC_QMMeasure_INBOUND</value>
    </filters>
    <label>Medidas de QM</label>
</ListView>