force-app/main/default/objects/Queue__c/listViews/QM_inbound_error.listView-meta.xml
<ListView>
    <fullName>QM_inbound_error</fullName>
    <columns>NAME</columns>
    <columns>IsSync__c</columns>
    <columns>EventName__c</columns>
    <columns>Status__c</columns>
    <columns>StatusMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventName__c</field>
        <operation>equals</operation>
        <value>SYNC_QM_INBOUND</value>
    </filters>
    <label>QM inbound error</label>
</ListView>