force-app/main/default/objects/Queue__c/listViews/Remessa1.listView-meta.xml
<ListView>
    <fullName>Remessa1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>IsSync__c</columns>
    <columns>EventName__c</columns>
    <columns>Status__c</columns>
    <columns>StatusMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventName__c</field>
        <operation>equals</operation>
        <value>SYNC_SHIPPING_INBOUND</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>9/28/2016 12:00 AM</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <label>Remessa 1</label>
</ListView>