force-app/main/default/objects/Queue__c/listViews/SYNC_PRODUCT_INBOUND.listView-meta.xml
<ListView>
    <fullName>SYNC_PRODUCT_INBOUND</fullName>
    <columns>NAME</columns>
    <columns>IsSync__c</columns>
    <columns>EventName__c</columns>
    <columns>Status__c</columns>
    <columns>StatusMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventName__c</field>
        <operation>equals</operation>
        <value>SYNC_PRODUCT_INBOUND</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2018 12:00 AM</value>
    </filters>
    <label>Produto</label>
</ListView>